--- a/sakkada/models/fields/filefield/readme
+++ b/sakkada/models/fields/filefield/readme
@@ -1,5 +1,5 @@
-AdvancedImageField based on django ImageField.
-AdvancedImageField based on AdvancedFileField.
+AdvancedFileField based on django FileField.
+AdvancedFileField based on ImrpovedFileField (http://django.org.ua/wiki/ImrpovedFileField)
 Used for Django 1.2.5 or later.
 
 Dependencies:
@@ -7,19 +7,19 @@ Dependencies:
 
 Functionality added:
  * 'max_size', 'min_size' optional arguments to keep filesize of uploaded file in specified limits.
- * 'mimetypes' optional arguments to allow upload files only with specified memitype (image/gif, image/png, image/jpeg).
+ * 'extensions', 'mimetypes' optional arguments to allow upload files only with specified extension and/or memitype.
  * 'clearable' optional argument to erase file from fs on delete model, default False.
  * 'delete file' checkbox in admin and generated forms wich allows to delete file on form save if it is not required.
 
 Usage:
  * import AdvancedFileField to your models module and use as usual file field
- * optionally set 'min_size', 'max_size' and 'mimetypes'
+ * optionally set 'min_size', 'max_size', 'extensions' and 'mimetypes'
  * optionally set 'clearable' to erase files from fs
 
 Example usage in model:
     class MyModel(models.Model)
-        attach = AdvancedImageField(
-                    _('Image'), blank=True, upload_to="upload/images/%Y/%m/",
+        attach = AdvancedFileField(
+                    _('Attach'), blank=True, upload_to="upload/files/%Y/%m/",
                     min_size=1024, max_size=1024*1024, clearable=True,
-                    mimetypes=['image/jpeg', 'image/png'],
+                    extensions=['.zip', '.gz'], mimetypes=['application/x-gzip', 'application/zip'],
                  )
