migrate to staticfiles - all admin media moved to static folder

--- a/sakkada/admin/editors/wymeditor/_install/static/admin/wymeditor/readme
+++ b/sakkada/admin/editors/wymeditor/_install/static/admin/wymeditor/readme
@@ -1,6 +1,6 @@
 Unpack wymeditor tar here.
 Result after unpack (depend on wymeditor version):
-media/
+static/
     admin/
         wymeditor/
             iframe
