--- a/sakkada/admin/editors/tinymce/readme
+++ b/sakkada/admin/editors/tinymce/readme
@@ -2,23 +2,29 @@ Tinymce editor with "django-filebrowser-no-grappelli" support.
 
 Usage:
 -----
- * install django-sakkada
- * install django-filebrowser-no-grappelli
-   (https://pypi.python.org/pypi/django-filebrowser-no-grappelli)
- * unpack tinymce (3.x) tar/jscripts into "EditorAdmin.tinymce_static_url"
-   (default is static root)
- * import sakkada.admin.editors.tinymce.EditorAdmin
- * set EditorAdmin as class of admin model
- * define tinymce_fields params for required fields
- * define tinymce_static_url if required, default is "tiny_mce" ("/static/tiny_mce/")
- * define tinymce_setup if required (alternative setup script)
- * copy static (admin/tiny_mce/* and admin/jquery/*) to your app/project static folder
- * copy static (filebrowser/js/FB_FileBrowseField.js) to your project static folder
-   (to override default FB_FileBrowseField.js)
+ *  Install "django-sakkada"
+ *  Install "django-filebrowser-no-grappelli"
+    (https://pypi.python.org/pypi/django-filebrowser-no-grappelli)
+ *  Unpack tinymce (3.x) tar/jscripts into "EditorAdmin.tinymce_static_url"
+    (default is static root)
+ *  Import "sakkada.admin.editors.tinymce.EditorAdmin"
+ *  Set "EditorAdmin" as class of admin model
+ *  Define "tinymce_fields" params for required fields
+ *  Define "tinymce_static_url" if required, default is "tiny_mce" ("/static/tiny_mce/")
+ *  Define "tinymce_setup" if required (alternative setup script; value will be inserted
+    into filename, if defined: "admin/tinymce/setup/activater.{value}.js")
+ *  Copy static "admin/*" and "filebrowser/js/FB_FileBrowseField.js"
+    (to override default "FB_FileBrowseField.js") to your project static folder
+    or add "sakkada.admin.editors.tinymce" to your INSTALLED_APPS before
+    "filebrowser".
 
 Example usage:
 -------------
+from django.contrib import admin
 from sakkada.admin.editors.tinymce import EditorAdmin
+
 
 class SomeAdmin(EditorAdmin, admin.ModelAdmin):
     tinymce_fields = ('text',)
+
+admin.site.register(Some, SomeAdmin)
