--- a/sakkada/admin/mptt_tree/readme
+++ b/sakkada/admin/mptt_tree/readme
@@ -1,21 +1,24 @@
-Based on FEINCMS tree editor (see http://www.feinheit.ch/, 
-                                  https://github.com/matthiask/feincms)
+ModelAdmin for django-mptt based tree. (Based on FEINCMS tree editor,
+see http://www.feinheit.ch/, https://github.com/matthiask/feincms)
 
 Usage:
 -----
- * install django-sakkada
- * import MpttTreeAdmin (AjaxBoolAdmin), and ajax_boolean from sakkada.admin.mptt_tree
- * set MpttTreeAdmin (AjaxBoolAdmin) as class of admin model
- * define ajax_boolean params for required fields
- * copy templates (admin/mptt_tree/*) to your application template folder
- * copy static (mptt_tree and jquery) to your application static folder
+ *  Install "django-sakkada"
+ *  Import "sakkada.admin.mptt_tree.MpttTreeAdmin"
+ *  Set "MpttTreeAdmin" as class of admin model
+ *  Set extended template name in "mptt_tree_parent_template" property if required
+ *  Copy static "admin/*" to your project static folder
+    or add "sakkada.admin.mptt_tree" to your INSTALLED_APPS.
+ *  Copy templates "admin/mptt_tree/*" to your project/application template folder
+    or add "sakkada.admin.mptt_tree" to your INSTALLED_APPS.
 
 Example usage:
 -------------
-from sakkada.admin.mptt_tree import MpttTreeAdmin, AjaxBoolAdmin, ajax_boolean
+from django.contrib import admin
+from sakkada.admin.mptt_tree import MpttTreeAdmin
+
 
 class SomeTreeAdmin(MpttTreeAdmin, admin.ModelAdmin):
-    ajax_active = ajax_boolean('active', _('is active?'))
+    mptt_tree_parent_template = 'admin/mptt_tree_parent_template.html'
 
-class SomeFlatAdmin(AjaxBoolAdmin, admin.ModelAdmin):
-    ajax_active = ajax_boolean('active', _('is active?'))
+admin.site.register(Some, SomeTreeAdmin)
